<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f5f5f5f5"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/constraintLayout"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:background="@drawable/top_background"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <ImageView
                        android:id="@+id/imageFundo"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:scaleType="matrix"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/circles" />

                    <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="550dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="90dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="90dp"
                        android:background="@drawable/white_background"
                        android:elevation="3dp"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" >

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            tools:context=".Login">

                            <ImageView
                                android:id="@+id/ivLogo"
                                android:layout_width="86dp"
                                android:layout_height="76dp"
                                android:layout_alignStart="@+id/etEmail"
                                android:layout_alignEnd="@+id/etEmail"
                                android:layout_marginStart="83dp"
                                android:layout_marginTop="70dp"
                                android:layout_marginEnd="92dp"
                                android:src="@drawable/teethkidsicone" />


                            <TextView
                                android:id="@+id/tvEmail"
                                android:layout_width="wrap_content"
                                android:textStyle="bold"
                                android:textColor="@color/black"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="50dp"
                                android:layout_marginStart="60dp"
                                android:text="@string/email"
                                android:layout_below="@id/ivLogo"
                                />

                            <EditText
                                android:id="@+id/etEmail"
                                style="@style/Edit_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="60dp"
                                android:layout_marginRight="60dp"
                                android:layout_below="@id/tvEmail"
                                android:maxLength="25"
                                />

                            <TextView
                                android:id="@+id/tvSenha"
                                android:layout_width="wrap_content"
                                android:textStyle="bold"
                                android:textColor="@color/black"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="20dp"
                                android:layout_marginStart="60dp"
                                android:text="@string/senha"
                                android:layout_below="@id/etEmail"
                                />

                            <EditText
                                android:id="@+id/etSenha"
                                style="@style/Edit_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textPassword"
                                android:maxLength="20"
                                android:layout_marginLeft="60dp"
                                android:layout_marginRight="60dp"
                                android:layout_below="@id/tvSenha"
                                />

                            <TextView
                                android:id="@+id/tvEsqSenha"
                                android:layout_width="wrap_content"
                                android:textStyle="bold"
                                android:textColor="@color/black"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:layout_marginEnd="60dp"
                                android:layout_marginStart="180dp"
                                android:text="@string/Esqsenha"
                                android:layout_below="@id/etEmail"
                                />

                            <Button
                                android:id="@+id/btnLogin"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/etSenha"
                                android:text="@string/login"
                                android:backgroundTint="@color/blue3"
                                android:textColor="@color/white"
                                android:layout_marginStart="60dp"
                                android:layout_marginEnd="60dp"
                                android:layout_marginTop="30dp"
                                />


                            <TextView
                                android:id="@+id/tvCad"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textStyle="bold"
                                android:textColor="@color/black"
                                android:layout_marginTop="20dp"
                                android:textSize="13sp"
                                android:layout_marginStart="60dp"
                                android:layout_marginEnd="60dp"
                                android:text="@string/cad"
                                android:layout_below="@id/btnLogin"
                                />

                        </RelativeLayout>





                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>