<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f5f5f5f5"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/constraintLayout"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:background="@drawable/top_background"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <TextView
                        android:id="@+id/tvTituloConfig"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="60dp"
                        android:text="@string/detalhes"
                        android:textColor="@color/white"
                        android:textSize="40sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
                        app:layout_constraintStart_toStartOf="@+id/linearLayout"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/imageFundo"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:scaleType="matrix"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/circles" />

                    <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="150dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/white_background"
                        android:elevation="3dp"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <HorizontalScrollView
                                android:id="@+id/horizontalScrollView2"
                                android:layout_width="match_parent"
                                android:layout_height="200dp"
                                android:layout_marginStart="10dp"
                                android:layout_marginTop="10dp"
                                android:layout_marginEnd="10dp"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent">

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent">

                                    <ImageView
                                        android:id="@+id/ivImagemDetalhe1"
                                        android:layout_width="350dp"
                                        android:layout_height="match_parent"
                                        android:layout_marginStart="05dp" />

                                    <ImageView
                                        android:id="@+id/ivImagemDetalhe2"
                                        android:layout_width="350dp"
                                        android:layout_height="match_parent"
                                        android:layout_marginStart="10dp" />

                                    <ImageView
                                        android:id="@+id/ivImagemDetalhe3"
                                        android:layout_width="350dp"
                                        android:layout_height="match_parent"
                                        android:layout_marginStart="10dp" />
                                </LinearLayout>
                            </HorizontalScrollView>

                            <TextView
                                android:id="@+id/tvNomeDetalhes2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="40dp"
                                android:text=""
                                app:layout_constraintStart_toEndOf="@+id/tvNomeDet2"
                                app:layout_constraintTop_toTopOf="@+id/tvNomeDet2" />

                            <TextView
                                android:id="@+id/tvNomeDet2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="20dp"
                                android:layout_marginTop="20dp"
                                android:text="@string/nomeCad"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView2" />

                            <Button
                                android:id="@+id/btnCancelar"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="40dp"
                                android:layout_marginTop="120dp"
                                android:layout_marginEnd="40dp"
                                android:layout_marginBottom="20dp"
                                android:backgroundTint="@color/vermelho"
                                android:text="@string/cancelar"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/tvNomeDet2" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
